--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,32 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+
+    &::-webkit-scrollbar {
+        width: 7px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: rgb(182, 182, 240);
+        border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background: linear-gradient(180deg, #00c6fb, rgb(139, 139, 246));
+    }
+}
+
+body {
+    font-family: sans-serif;
+    font-size: 15px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+li {
+    list-style: none;
 }
