--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-drop-dowm-menu [selectedOption]="selectData_1[0]" [options]="selectData_1"></app-drop-dowm-menu>
+<div class="app-section">
+    <div class="container">
+        <app-drop-dowm-menu [selectedOption]="selectData_1[0]" [options]="selectData_1"></app-drop-dowm-menu>
+    </div>
+</div>
