Add option-count__color class

--- a/src/app/components/drop-dowm-menu/drop-dowm-menu.component.html
+++ b/src/app/components/drop-dowm-menu/drop-dowm-menu.component.html
@@ -4,7 +4,7 @@
         <span class="option-name">{{selectedOption.name}}</span>
 
         <div class="option-count">
-            <span>{{selectedOption.id}}</span> / <span>{{options.length}}</span>
+            <span class="option-count__color">{{selectedOption.id}}</span> / <span>{{options.length}}</span>
         </div>
 
     </div>
