--- a/src/app/components/drop-dowm-menu/drop-dowm-menu.component.scss
+++ b/src/app/components/drop-dowm-menu/drop-dowm-menu.component.scss
@@ -10,6 +10,9 @@
         cursor: pointer;
         .option-count {
             padding-left: 35px;
+            .option-count__color {
+                font-weight: bold;
+            }
         }
     }
 
