Implement outsideClick directive

--- a/src/app/components/drop-dowm-menu/drop-dowm-menu.component.html
+++ b/src/app/components/drop-dowm-menu/drop-dowm-menu.component.html
@@ -1,4 +1,10 @@
-<div class="drop-down-menu" [ngClass]="{'open': isDropDownOpen, 'close': !isDropDownOpen}">
+<div 
+    class="drop-down-menu" 
+    appOutsideClick
+    (outsideClick)="isDropDownOpen = false"
+    [ngClass]="{'open': isDropDownOpen, 'close': !isDropDownOpen}"
+
+    >
     <div class="select-items" style="display: flex" (click)="isDropDownOpen = !isDropDownOpen">
 
         <span class="option-name">{{selectedOption.name}}</span>
