--- a/src/app/components/drop-dowm-menu/drop-dowm-menu.component.scss
+++ b/src/app/components/drop-dowm-menu/drop-dowm-menu.component.scss
@@ -1,3 +1,13 @@
+@mixin angle-down-solid {
+    content: "";
+    position: absolute;
+    top: 3.5%;
+    left: 22.3%;
+    background: url("../../../assets/images/angle-down-solid.svg") no-repeat;
+    height: 13px;
+    width: 14px;
+}
+
 .drop-down-menu {
     margin-top: 15px;
     .select-items {
@@ -37,25 +47,11 @@
     }
 
     &.close::after {
-        content: "";
-        position: absolute;
-        top: 3.5%;
-        left: 22.3%;
-        background-image: url("../../../assets/images/angle-down-solid.svg");
-        background-repeat: no-repeat;
-        height: 13px;
-        width: 14px;
+        @include angle-down-solid;
     }
 
     &.open::after {
-        content: "";
-        position: absolute;
-        top: 3.5%;
-        left: 22.3%;
-        background-image: url("../../../assets/images/angle-down-solid.svg");
-        background-repeat: no-repeat;
-        height: 13px;
-        width: 14px;
+        @include angle-down-solid;
         transform: rotate(180deg);
     }
 }
